# abnorm_dectection_zhu

./: README.md
backend/: criteria.py  detectors.py  domain.json  domain.yml  ext.py  hypersearch.py  import_extension.py  main.py  pyproject.toml
backend/distfiles/: checkonnx.ipynb
backend/notebooks/: How_to_use_detectors.ipynb  How_to_use_hypersearch.ipynb  How_to_use_hypersearch_PSD ZHUcopy.ipynb  ben-1-criteria.ipynb  howto_ext_image.ipynb  mvtec_optuna.ipynb  mvtec_results.ipynb  renamePNG.ipynb
backend/sdd_cxx/: ext.py  ext_impl.pyd  import_extension.py
