[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ippei Usami <ippei@hacarus.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
optuna = "^3.1.0"
opencv-python = "4.6.0.66"
scikit-learn = "^1.2.1"
fire = "^0.5.0"
pyinstaller = "^5.10.1"
pandas = "^2.0.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
jupyter = "^1.0.0"
matplotlib = "^3.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
